# devpulse

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml  release.yml
src/: ci.rs  completions.rs  config.rs  export.rs  filter.rs  git.rs  group.rs  main.rs  scanner.rs  since.rs  summary.rs  table.rs  theme.rs  tui.rs  types.rs  watch.rs
tests/: integration_test.rs
