[package]
name = "devpulse"
version = "0.1.0"
edition = "2024"
description = "Project health dashboard for your terminal"
license = "MIT"
repository = "https://github.com/deelo-ai/devpulse"
homepage = "https://github.com/deelo-ai/devpulse"
keywords = ["git", "dashboard", "terminal", "developer-tools", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
ctrlc = "3"
toml = "0.8"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
