[package]
name = "dev-pulse"
version = "0.1.0"
edition = "2024"
description = "Project health dashboard for your terminal"
license = "MIT"
repository = "https://github.com/deelo-ai/devpulse"
homepage = "https://github.com/deelo-ai/devpulse"
keywords = ["git", "dashboard", "terminal", "developer-tools", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["deelo-ai"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.20", default-features = false }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
ctrlc = "3"
toml = "0.8"
rayon = "1.10"
clap_complete = "4.5.66"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "devpulse"
path = "src/main.rs"
